<resources>
    <string name="shared_fike">Estacionapp.SHARED_FILE</string>
    <string name="app_name">EstacionApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuración</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="nav_submenu_title">Cuenta</string>
    <string name="nav_log_out">Cerrar sesión</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_search">Buscar</string>

    <string name="hello_blank_fragment">OpenGL</string>
    <string name="nav_map">Estacionamiento</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">El nombre de usuario es inválido</string>
    <string name="error_invalid_password">La contraseña es inválida</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="results">Resultados</string>
    <string name="search">Buscar</string>
    <string name="reserve">Reservar</string>
    <string name="currency">$%s/h</string>
    <string name="techado">Techado</string>
    <string name="drive_your_car">Manejan</string>
    <string name="todo_el_dia">Todo el dia</string>
    <string name="inflan_ruedas">Aire</string>
    <string name="lavadero">Lavadero</string>
    <string name="dejar_llaves">Dejar llaves</string>
    <string name="full_name">Nombre y Apellido</string>
    <string name="email">Correo electrónico</string>
    <string name="plate">Patente</string>
    <string name="nav_inner_map">Mapa estacionamiento</string>
    <string name="save">Guardar</string>
    <string name="driver_updated_toast">Datos actualizados correctamente</string>
    <string name="bajada">¡El lugar ya lo tenés!</string>
    <string name="inner_map_prev"><![CDATA[<<]]></string>
    <string name="inner_map_next"><![CDATA[>>]]></string>

    <string name="reserveProgressTitle">Reservando</string>
    <string name="navigation_message">En camino!</string>
    <string name="reservation_rejected_message">La reserva fue denegada, pruebe en otro estacionamiento</string>
</resources>
