<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/profile_image_picture"
            app:civ_border="true"
            app:civ_border_width="5dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_driver"
            tools:targetApi="lollipop" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <EditText
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:singleLine="true"
                android:hint="@string/full_name"
                android:textAlignment="center"
                android:textColorHint="#AAAAAA"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_txt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:singleLine="true"
                android:textColorHint="#AAAAAA"
                android:textAlignment="center"
                android:hint="@string/email"
                android:textColor="#fff"
                android:textSize="14sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/plate_txt"
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="#fff"
                android:hint="@string/plate"
                android:textColorHint="#666666"
                android:singleLine="true"
                android:elevation="4dp"
                android:padding="20dp" />

            <Spinner
                android:id="@+id/vehicle_sp"
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:hint="@string/plate"
                android:textColorHint="#666666"
                android:elevation="4dp"
                android:padding="20dp" />

            <Button
                android:id="@+id/save_driver"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:elevation="4dp"
                android:text="@string/save"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>

    <!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_cone"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </RadioGroup>

</LinearLayout>
-->
